[package]
name = "cid"
version = "0.1.0"
authors = ["Sendy Halim <sendyhalim93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.11" }
clap = { version = "2.33" }
dirs = { version = "2.0.2" }
log = { version = "0.4.8" }
env_logger = { version = "0.7.1" }
pager = { version = "0.15.0" }
serde_json = { version = "1.0.46" }
serde = { version = "1.0.60", features = ["derive"] }
failure = { version = "0.1.6" }

[dev-dependencies]
mockall = "0.6.0"


[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "cid"
path = "src/bin/cid.rs"
