[package]
name = "jab"
version = "0.0.1"
authors = ["Sendy Halim <sendyhalim93@gmail.com>"]
edition = "2018"
description = """\
  JAB is a database state management tool, think of it as git but for \
  database. You can commit your current db state and checkout to \
  your previous db state.\
"""
readme = "readme.md"
homepage = "https://github.com/sendyhalim/jab"
repository = "https://github.com/sendyhalim/jab"
keywords = ["cli", "database", "developer-tools"]
categories = ["command-line-utilities"]
license = "MIT"
license-file = "license"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.11" }
clap = { version = "2.33" }
dirs = { version = "2.0.2" }
log = { version = "0.4.8" }
env_logger = { version = "0.7.1" }
pager = { version = "0.15.0" }
serde_json = { version = "1.0.46" }
serde = { version = "1.0.60", features = ["derive"] }
failure = { version = "0.1.6" }

[build-dependencies]
built = "0.4"

[dev-dependencies]
mockall = "0.6.0"


[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "jab"
path = "src/bin/jab.rs"
